--- a/Linear Regression/Preprocessing/Preprocessing.ipynb
+++ b/Linear Regression/Preprocessing/Preprocessing.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a6317f0a",
+   "id": "2b6f5e6a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3b29787a",
+   "id": "28061397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "73c2544f",
+   "id": "327addad",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "bf91a7fe",
+   "id": "66eada1d",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93f0836b",
+   "id": "986e9105",
    "metadata": {},
    "source": [
     "# Preprocessing"
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30937b56",
+   "id": "8c41ab1b",
    "metadata": {},
    "source": [
     "### Converting categorical data into numerical data using one hot encoding"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "67d08a96",
+   "id": "0bada216",
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "95fe9499",
+   "id": "b82b5c8b",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d548843d",
+   "id": "372abe00",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "822bafcd",
+   "id": "422ba839",
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce8eb527",
+   "id": "c49e283d",
    "metadata": {},
    "source": [
     "#### Binary data into numerical data"
@@ -548,8 +548,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "983fb0d9",
+   "execution_count": 17,
+   "id": "bdaed594",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,8 +559,259 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "cae56e0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>bmi</th>\n",
+       "      <th>children</th>\n",
+       "      <th>smoker</th>\n",
+       "      <th>region</th>\n",
+       "      <th>charges</th>\n",
+       "      <th>northeast</th>\n",
+       "      <th>northwest</th>\n",
+       "      <th>southeast</th>\n",
+       "      <th>southwest</th>\n",
+       "      <th>smoker_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19</td>\n",
+       "      <td>female</td>\n",
+       "      <td>27.900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>16884.92400</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.770</td>\n",
+       "      <td>1</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1725.55230</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28</td>\n",
+       "      <td>male</td>\n",
+       "      <td>33.000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>4449.46200</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>33</td>\n",
+       "      <td>male</td>\n",
+       "      <td>22.705</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>21984.47061</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32</td>\n",
+       "      <td>male</td>\n",
+       "      <td>28.880</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>3866.85520</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1333</th>\n",
+       "      <td>50</td>\n",
+       "      <td>male</td>\n",
+       "      <td>30.970</td>\n",
+       "      <td>3</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>10600.54830</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1334</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>31.920</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>northeast</td>\n",
+       "      <td>2205.98080</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1335</th>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>36.850</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southeast</td>\n",
+       "      <td>1629.83350</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1336</th>\n",
+       "      <td>21</td>\n",
+       "      <td>female</td>\n",
+       "      <td>25.800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>no</td>\n",
+       "      <td>southwest</td>\n",
+       "      <td>2007.94500</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1337</th>\n",
+       "      <td>61</td>\n",
+       "      <td>female</td>\n",
+       "      <td>29.070</td>\n",
+       "      <td>0</td>\n",
+       "      <td>yes</td>\n",
+       "      <td>northwest</td>\n",
+       "      <td>29141.36030</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1338 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      age     sex     bmi  children smoker     region      charges  northeast  \\\n",
+       "0      19  female  27.900         0    yes  southwest  16884.92400        0.0   \n",
+       "1      18    male  33.770         1     no  southeast   1725.55230        0.0   \n",
+       "2      28    male  33.000         3     no  southeast   4449.46200        0.0   \n",
+       "3      33    male  22.705         0     no  northwest  21984.47061        0.0   \n",
+       "4      32    male  28.880         0     no  northwest   3866.85520        0.0   \n",
+       "...   ...     ...     ...       ...    ...        ...          ...        ...   \n",
+       "1333   50    male  30.970         3     no  northwest  10600.54830        0.0   \n",
+       "1334   18  female  31.920         0     no  northeast   2205.98080        1.0   \n",
+       "1335   18  female  36.850         0     no  southeast   1629.83350        0.0   \n",
+       "1336   21  female  25.800         0     no  southwest   2007.94500        0.0   \n",
+       "1337   61  female  29.070         0    yes  northwest  29141.36030        0.0   \n",
+       "\n",
+       "      northwest  southeast  southwest  smoker_code  \n",
+       "0           0.0        0.0        1.0            1  \n",
+       "1           0.0        1.0        0.0            0  \n",
+       "2           0.0        1.0        0.0            0  \n",
+       "3           1.0        0.0        0.0            0  \n",
+       "4           1.0        0.0        0.0            0  \n",
+       "...         ...        ...        ...          ...  \n",
+       "1333        1.0        0.0        0.0            0  \n",
+       "1334        0.0        0.0        0.0            0  \n",
+       "1335        0.0        1.0        0.0            0  \n",
+       "1336        0.0        0.0        1.0            0  \n",
+       "1337        1.0        0.0        0.0            1  \n",
+       "\n",
+       "[1338 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "medical_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "9f6fc781",
+   "id": "50dd86a9",
    "metadata": {},
    "outputs": [],
    "source": []
